# hr_app

./: .gitignore  CMakeLists.txt  Makefile  file_to_char.py  index.html  index.html.h  lwipopts.h  lwipopts_examples_common.h  picow_access_point.c  script.js  script.js.h  style.css  style.css.h
sha1/: sha1.c  sha1.h
